feat: add send function
