# docs/swagger.json
@@ -24,7 +24,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get all user's account using token from the authorization header",
+                "description": "Get all user's account using token from the authorization header and transactions per account",
                 "consumes": [
                     "application/json"
                 ],
@@ -34,7 +34,7 @@
                 "tags": [
                     "Account Manager"
                 ],
-                "summary": "Get all user's account",
+                "summary": "Get all user's account and user's transactions per account",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -150,6 +150,68 @@
                 }
             }
         },
+        "/send": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Transfer money",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Transfer money",
+                "parameters": [
+                    {
+                        "description": "Transfer Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.TransferRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/transactions": {
+            "get": {
+                "description": "Get all transactions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Get all transactions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "security": [
@@ -182,6 +244,11 @@
     "definitions": {
         "dto.CreateAccountRequest": {
             "type": "object",
+            "required": [
+                "account_number",
+                "balance",
+                "type"
+            ],
             "properties": {
                 "account_number": {
                     "type": "string"
@@ -235,6 +302,27 @@
                 },
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.TransferRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "dof_number",
+                "sof_number"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "dof_number": {
+                    "description": "Destination of Fund Number",
+                    "type": "string"
+                },
+                "sof_number": {
+                    "description": "Source of Fund Number",
+                    "type": "string"
                 }
             }
         }
